Fix issue with blurry transactions

--- a/src/app/components/services/mobile/mobile-tracket/transaction/transaction.component.css
+++ b/src/app/components/services/mobile/mobile-tracket/transaction/transaction.component.css
@@ -13,9 +13,8 @@
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
   padding: 10px 0;
   transition: all 1s ease-in-out;
-
-  -webkit-font-smoothing: antialiased;
   animation: fade-in 1s 0s forwards, card-selection 5s 5s forwards;
+  transform: translate(0.5px, 0.5px);
 }
 
 @keyframes fade-in {
@@ -24,7 +23,7 @@
     opacity: 0;
   }
   100% {
-    transform: translateY(0px);
+    transform: translateY(0.5px, 0.5px);
     opacity: 1;
   }
 }
